--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -50,7 +50,7 @@ java eu.carlossanchez.continuouslava.continuum.ContinuumMonitor Continuum_URL [C
 = Running with CruiseControl =
 
 {{{
-java eu.carlossanchez.continuouslava.cruisecontrol.CruiseControlMonitor CCTray_feed_url [COMPort] [SuccessDevice] [FailureDevice] [startingAtHour] [endingAtHour]" );
+java eu.carlossanchez.continuouslava.cruisecontrol.CruiseControlMonitor CCTray_feed_url [COMPort] [SuccessDevice] [FailureDevice] [startingAtHour] [endingAtHour]
   CCTray_feed_url : url of the CCTray feed, usually http://cruisecontrol_machine/dashboard/cctray.xml
   COMPort: COM1 by default
   SuccessDevice: X10 Code of device to turn on on success, by default A1
